Fix button not showing at the right time

--- a/static/style.css
+++ b/static/style.css
@@ -206,8 +206,7 @@ body {
   }
 }
 
-@media (min-width: 768px) {
-  #menuToggle,
+@media (min-width: 1400px) {
   #menuClose {
     display: none !important;
   }
